force-app/main/default/objects/Service_Request__c/fields/Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the service request has been escalated.</description>
    <inlineHelpText>Indicates whether this service request requires escalation.</inlineHelpText>
    <label>Is Escalated</label>
    <type>Checkbox</type>
</CustomField>