force-app/main/default/objects/Service_Request__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Details explaining how the service request was resolved.</description>
    <inlineHelpText>Enter the resolution details, actions taken, and any relevant notes.</inlineHelpText>
    <label>Resolution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>