force-app/main/default/objects/Service_Request__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Date and time when the service request was resolved.</description>
    <inlineHelpText>Stores the date and time when the service request reaches the Resolved status.</inlineHelpText>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>