force-app/main/default/objects/Service_Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Main subject/title of the service request</description>
    <inlineHelpText>Enter a short description of the service request</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>